--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
 <header class="bg-white">
     <div class="mx-auto flex h-16 max-w-screen-xl items-center gap-8 px-4 sm:px-6 lg:px-8">
-        <a class="block text-teal-600" href="#">
+        <a class="block text-teal-600" href="{% url 'index' %}">
             <span class="sr-only">Home</span>
             <svg class="h-8" viewBox="0 0 28 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -34,16 +34,17 @@
             <div class="flex items-center gap-4">
                 <div class="sm:flex sm:gap-4">
                     {% if user.is_authenticated %}
-                        <a
-                                class="block rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-teal-700"
-                                href="#"
-                        >
-                            Logout
-                        </a>
+                        <form method="post" action="{% url 'logout' %}">
+                            {% csrf_token %}
+                            <button type="submit"
+                                    class="block rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-teal-700">
+                                Logout
+                            </button>
+                        </form>
                     {% else %}
                         <a
                                 class="block rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-teal-700"
-                                href="#"
+                                href="{% url 'login' %}"
                         >
                             Login
                         </a>
