--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
 
                         <a
                                 class="hidden rounded-md bg-gray-100 px-5 py-2.5 text-sm font-medium text-teal-600 transition hover:text-teal-600/75 sm:block"
-                                href="#"
+                                href="{% url 'register' %}"
                         >
                             Register
                         </a>
@@ -78,6 +78,29 @@
     </div>
 </header>
 
+{% if messages %}
+    {% for message in messages %}
+        {% if message.tags == "success" %}
+            <div role="alert" class="rounded border-s-4 border-teal-500 bg-teal-50 p-4 w-3/4 md:w-1/2 mx-auto my-5">
+                <p class="mt-2 text-sm text-teal-700">
+                    {{ message }}
+                </p>
+            </div>
+        {% elif message.tags == "error" %}
+            <div role="alert" class="rounded border-s-4 border-red-500 bg-red-50 p-4 w-3/4 md:w-1/2 mx-auto my-5">
+                <p class="mt-2 text-sm text-red-700">
+                    {{ message }}
+                </p>
+            </div>
+        {% else %}
+            <div role="alert" class="rounded border-s-4 border-slate-500 bg-slate-50 p-4 w-3/4 md:w-1/2 mx-auto my-5">
+                <p class="mt-2 text-sm text-slate-700">
+                    {{ message }}
+                </p>
+            </div>
+        {% endif %}
+    {% endfor %}
+{% endif %}
 
 {% block content %}
 {% endblock %}
