--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -2,7 +2,7 @@
 {% load widget_tweaks %}
 
 {% block title %}
-    Login
+    Register
 {% endblock %}
 
 {% block content %}
@@ -21,25 +21,39 @@
             >
                 <div class="max-w-xl lg:max-w-3xl">
                     <h1 class="mt-6 text-2xl font-bold text-gray-900 sm:text-3xl md:text-4xl">
-                        Login
+                        Register
                     </h1>
 
                     <p class="mt-4 leading-relaxed text-gray-500">
-                        Login to Utils App
+                        Register for Utils App
                     </p>
 
                     <form class="mt-8 grid grid-cols-6 gap-6" method="post">
                         {% csrf_token %}
                         <div class="col-span-6">
                             <label for="Username" class="block text-sm font-medium text-gray-700"> Email </label>
+                            {% render_field form.email class+="mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 shadow-sm" %}
+                        </div>
 
-                            {% render_field form.username class+="mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 shadow-sm" %}
+                        <div class="col-span-3">
+                            <label for="Password" class="block text-sm font-medium text-gray-700"> First Name </label>
+                            {% render_field form.first_name class+="mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 shadow-sm" %}
+                        </div>
+
+                        <div class="col-span-3">
+                            <label for="Password" class="block text-sm font-medium text-gray-700"> Last Name </label>
+                            {% render_field form.last_name class+="mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 shadow-sm" %}
                         </div>
 
                         <div class="col-span-6">
                             <label for="Password" class="block text-sm font-medium text-gray-700"> Password </label>
+                            {% render_field form.password1 class+="mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 shadow-sm" %}
+                        </div>
 
-                            {% render_field form.password class+="mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 shadow-sm" %}
+                        <div class="col-span-6">
+                            <label for="Password" class="block text-sm font-medium text-gray-700"> Confirm
+                                Password </label>
+                            {% render_field form.password2 class+="mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 shadow-sm" %}
                         </div>
 
                         <div class="col-span-6 sm:flex sm:items-center sm:gap-4">
@@ -47,12 +61,12 @@
                                     class="inline-block shrink-0 rounded-md border border-teal-600 bg-teal-600 px-12 py-3 text-sm font-medium text-white transition hover:bg-transparent hover:text-teal-600 focus:outline-none focus:ring active:text-teal-500"
                                     type="submit"
                             >
-                                Login
+                                Register
                             </button>
 
                             <p class="mt-4 text-sm text-gray-500 sm:mt-0">
-                                Don't have an account?
-                                <a href="{% url 'register' %}" class="text-gray-700 underline">Register here.</a>
+                                Already have an account?
+                                <a href="{% url 'login' %}" class="text-gray-700 underline">Login here.</a>
                             </p>
                         </div>
                     </form>
