--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
                 <div>
                     <h1 class="text-2xl font-bold text-gray-900 sm:text-3xl">
                         {% if user.is_authenticated %}
-                            Welcome, {{ user }}.
+                            Welcome, {{ user }}!
                         {% else %}
                             Utils
                         {% endif %}
@@ -26,5 +26,46 @@
             </div>
         </div>
     </header>
+
+    {% if user.is_authenticated %}
+        <div class="grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-8 w-4/5 mx-auto">
+            <div>
+                <a href="#" class="group relative block h-64 sm:h-80 lg:h-96">
+                    <span class="absolute inset-0 border-2 border-dashed border-black"></span>
+                    <div class="relative flex h-full transform items-end border-2 border-black bg-white transition-transform group-hover:-translate-x-2 group-hover:-translate-y-2">
+                        <div class="p-4 !pt-0 transition-opacity group-hover:absolute group-hover:opacity-0 sm:p-6 lg:p-8">
+                            <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    class="size-10 sm:size-12"
+                                    fill="none"
+                                    viewBox="0 0 24 24"
+                                    stroke="currentColor"
+                            >
+                                <path d="M14 16L16.1 18.5L20 13.5" stroke="#1C274C" stroke-width="1.5"
+                                      stroke-linecap="round" stroke-linejoin="round"></path>
+                                <path d="M10 14H3" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round"></path>
+                                <path d="M10 18H3" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round"></path>
+                                <path d="M3 6L13.5 6M20 6L17.75 6" stroke="#1C274C" stroke-width="1.5"
+                                      stroke-linecap="round"></path>
+                                <path d="M20 10L9.5 10M3 10H5.25" stroke="#1C274C" stroke-width="1.5"
+                                      stroke-linecap="round"></path>
+                            </svg>
+                            <h2 class="mt-4 text-xl font-medium sm:text-2xl">Work Logger</h2>
+                        </div>
+                        <div class="absolute p-4 opacity-0 transition-opacity group-hover:relative group-hover:opacity-100 sm:p-6 lg:p-8">
+                            <h3 class="mt-4 text-xl font-medium sm:text-2xl">Work Logger</h3>
+                            <p class="mt-4 text-sm sm:text-base">
+                                Easy way to log the workday.
+                            </p>
+                            <p class="mt-8 font-bold">Open</p>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="h-32 rounded-lg bg-gray-200"></div>
+            <div class="h-32 rounded-lg bg-gray-200"></div>
+        </div>
+
+    {% endif %}
 
 {% endblock %}
