--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -30,6 +30,9 @@
 
                     <form class="mt-8 grid grid-cols-6 gap-6" method="post">
                         {% csrf_token %}
+                        <div class="bg-red-600 text-white col-span-6 border rounded rounded-md border-red-600 p-2">
+                            <strong>{{ form.non_field_errors }}</strong>
+                        </div>
                         <div class="col-span-6">
                             <label for="Username" class="block text-sm font-medium text-gray-700"> Email </label>
                             {% render_field form.email class+="mt-1 w-full rounded-md border-gray-200 bg-white text-sm text-gray-700 shadow-sm" %}
