--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@
     {% if user.is_authenticated %}
         <div class="grid grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-8 w-4/5 mx-auto">
             <div>
-                <a href="#" class="group relative block h-64 sm:h-80 lg:h-96">
+                <a href="{% url 'logger_home' %}" class="group relative block h-64 sm:h-80 lg:h-96">
                     <span class="absolute inset-0 border-2 border-dashed border-black"></span>
                     <div class="relative flex h-full transform items-end border-2 border-black bg-white transition-transform group-hover:-translate-x-2 group-hover:-translate-y-2">
                         <div class="p-4 !pt-0 transition-opacity group-hover:absolute group-hover:opacity-0 sm:p-6 lg:p-8">
