--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} {% endblock %} | Utils</title>
+    {% block head %}{% endblock %}
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp,container-queries"></script>
 </head>
 <body>
@@ -23,7 +26,7 @@
                             |
                         </li>
                         <li>
-                            <a class="text-gray-500 transition hover:text-gray-500/75" href="{% url 'index' %}">
+                            <a class="text-gray-500 transition hover:text-gray-500/75" href="{% url 'logger_home' %}">
                                 Work Logger
                             </a>
                         </li>
@@ -37,7 +40,7 @@
                         <form method="post" action="{% url 'logout' %}">
                             {% csrf_token %}
                             <button type="submit"
-                                    class="block rounded-md bg-teal-600 px-5 py-2.5 text-sm font-medium text-white transition hover:bg-teal-700">
+                                    class="block rounded-md px-5 py-2.5 text-sm font-medium transition bg-white text-rose-600 border border-rose-600 hover:bg-rose-700 hover:text-white">
                                 Logout
                             </button>
                         </form>
@@ -57,22 +60,6 @@
                         </a>
                     {% endif %}
                 </div>
-
-                <button
-                        class="block rounded bg-gray-100 p-2.5 text-gray-600 transition hover:text-gray-600/75 md:hidden"
-                >
-                    <span class="sr-only">Toggle menu</span>
-                    <svg
-                            xmlns="http://www.w3.org/2000/svg"
-                            class="size-5"
-                            fill="none"
-                            viewBox="0 0 24 24"
-                            stroke="currentColor"
-                            stroke-width="2"
-                    >
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
-                    </svg>
-                </button>
             </div>
         </div>
     </div>
@@ -105,4 +92,7 @@
 {% block content %}
 {% endblock %}
 </body>
+
+{% block script %}
+{% endblock %}
 </html>
